tests/res/types/error_super.say
// `super` was removed; it is no longer a keyword, so it reads as an undefined name.
type A {
    pub fn m() {
        return super.x; // error: Undefined variable 'super'
    }
}
